[Bug Fix] Edit Profile

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -140,7 +140,7 @@
 
                                     <div class="form-group">
                                         <div class="col-lg-offset-2 col-lg-10">
-                                            <%= f.submit "Salvar" ,:class=>"btn btn-success",:id=>"save_btn" %>
+                                            <%= f.submit "Salvar" ,:class=>"btn btn-success" %>
                                             <%= link_to "Cancelar", :back ,:class=>"btn btn-default" %>
                                         </div>
                                     </div>
