--- a/app/views/users/myads.html.erb
+++ b/app/views/users/myads.html.erb
@@ -3,10 +3,16 @@
     <li class="active">
       <i class="fa fa-shopping-cart"></i> <a class="url" href="<%= ads_path %>">Anúncios</a> >
     </li>
-      <% if user_signed_in? %>
+      <% if user_signed_in? && current_user.id == params[:id] %>
         <a class="url" href="<%= myads_user_path(current_user.id) %>"> Os meus anúncios</a>
         <%= link_to "<i class='fa fa-plus'></i>Novo Anúncio".html_safe, new_ad_path, class:"url", style:"float:right" %>
+      <% elsif user_signed_in? %>
+        <a class="url" href="<%= myads_user_path(params[:id]) %>"> Anúncios de <%= @user.name %></a>
+        <%= link_to "<i class='fa fa-plus'></i>Novo Anúncio".html_safe, new_ad_path, class:"url", style:"float:right" %>
+      <% else %>
+        <a class="url" href="<%= myads_user_path(params[:id]) %>"> Anúncios de <%= @user.name %></a>
       <% end %>
+
   </ol>
 
 <%= will_paginate(@ads, renderer: BootstrapPagination::Rails, :previous_label => 'Anterior', :next_label => 'Seguinte') %>
