--- a/app/views/layouts/userslayouts.html.erb
+++ b/app/views/layouts/userslayouts.html.erb
@@ -51,13 +51,13 @@
                   </li>
       
 
-            <% if (user_signed_in?  && current_user == @user.id) %>
+            <% if (user_signed_in?  && current_user.id == @user.id) %>
 
-                  <% if (current_user && @user.id == current_user.id) %>
+                 
                     <% if action_name=="edit"%><li class="active"><%else%><li><%end%>
                       <%= link_to " Editar Perfil".html_safe , edit_user_registration_path(), :class => "fa fa-edit" %>
                     </li>
-                  <% end %>
+          
             <% end %>
 
 
