[DESIGN FEATURE]Traduções EN->PT[Hélder Abreu]

--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -181,17 +181,17 @@
       <ul class="nav nav-tabs" style="border-bottom: 1px solid #dddddd;">
          <li class="active">
             <a data-toggle="tab" href="#related" id="extraNavButton">
-            Produtos na mesma Area
+            Produtos na mesma área
             </a>
          </li>
          <li>
             <a data-toggle="tab" href="#last_viewed" id="extraNavButton">
-            Ultimos vistos
+            Últimos vistos
             </a>
          </li>
          <li>
             <a data-toggle="tab" href="#reviews" id="extraNavButton">
-            Review do vendedor
+            Avaliação do vendedor
             </a>
          </li>
       </ul>
@@ -234,7 +234,7 @@
          </article>
          <% end %>
          <% if @reviews_user.empty? %>
-         <p> Não existem reviews para este utilizador </p>
+         <p> Não existem avaliações para este utilizador </p>
          <% end %>
       </div>
    </div>
