--- a/app/views/layouts/userslayouts.html.erb
+++ b/app/views/layouts/userslayouts.html.erb
@@ -82,7 +82,7 @@
          <% if (user_signed_in?) %>   
                 <% if (current_user && @user.id != current_user.id) %>
                 
-                    <button class="followToggle btn btn-primary" value="<%= @user.id %>"><% if current_user.is_following(@user) %>unfollow<% else %>follow<% end %></button>
+                    <button class="followToggle btn btn-primary" value="<%= @user.id %>"><% if current_user.is_following(@user) %>Deixar de Seguir<% else %>Seguir<% end %></button>
             
                 <% end %>
       
