--- a/app/views/layouts/_sidebar_right_ad.html.erb
+++ b/app/views/layouts/_sidebar_right_ad.html.erb
@@ -7,7 +7,7 @@
     <div class="panel-body">
       <ul class="thumbnails list-unstyled">
         <% publicity_list.each do |publicity|  %>
-          <li style="margin-bottom:-25px;" onclick="document.location='<%= publicity.link %>'">
+          <li style="margin-bottom:-25px;" onclick="window.open('<%= publicity.link %>','_blank');">
             <div class="thumbnail" style="padding: 5px">
               <img alt="Pub" id="pubAD" src=<%=publicity.image.url()%>>
             </div>
