[Update] Questions & Ads by Order

--- a/app/views/layouts/_sidebar_right_academy.erb
+++ b/app/views/layouts/_sidebar_right_academy.erb
@@ -5,7 +5,7 @@
       </header>
       <div class="panel-body">
         <p class="col-md-12">
-          The best way to get the answers you're looking for is to learn how to best ask your question. Learn some tips on how to best format your questions in the forum.
+          A melhor maneira de obter as respostas que está à procura é aprender a melhor forma de fazer sua pergunta. Explique de forma clara e sucinta a sua pergunta....
         <p>
       </div>
     </section>
