--- a/app/views/academy/questions/index.html.erb
+++ b/app/views/academy/questions/index.html.erb
@@ -26,7 +26,6 @@
           <th width="50%" class="tutorial_text_head">PERGUNTA</th>
           <th width="10%" class="tutorial_text_head">RESPOSTAS</th>
           <th width="13%" class="tutorial_text_head">CATGEGORIA</th>
-          <th width="17%" class="tutorial_text_head">VISUALIZAÇÕES</th>
         </tr>
       </thead>
       <tbody>
@@ -44,13 +43,13 @@
             </h4>
             <p id="text-link"><small><%= link_to academy_question.text.html_safe, academy_question %></small></p>
           </td>
-          <td style="vertical-align: middle;"><strong>110 </strong></td>
+          <td style="vertical-align: middle;"><strong><%= academy_question.answers.count %> </strong></td>
           <td style="vertical-align:middle;">
             <span class="label" style="background-color:#<%= academy_question.category.color %>;">
               <%= academy_question.category.name %>
             </span>
           </td>
-          <td style="vertical-align: middle;">76x</td>
+          
         </tr>
         <% end %>
 
