--- a/app/views/user_mailer/new_user_email.html.erb
+++ b/app/views/user_mailer/new_user_email.html.erb
@@ -4,18 +4,19 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Bem vindo a AgroSocial, <%= @user.name %></h1>
+    <img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-frc3/t1/1396071_390235727745779_1603349022_n.png" alt="Smiley face" height="120" width="120"> <br>
+    <h1>Caro, <%= @name %> seja bem vindo ao AgroSocial</h1>
     <p>
-      A sua conta foi criada com sucesso.
+      O seu login com <%= @destination %>, foi feito com sucesso,
     </p>
-    <% if @pass != nil %>
+    <% if @password %>
       <p>
-        A tua password é: <%= @pass %> 
+        A tua password é: <%= @password %> 
       </p>
     <% end %>
     <p>
-      Para fazer login use este link: <a href="https://http://localhost:3000/users/sign_in">https://http://localhost:3000/users/sign_in</a>.
+      Para seguir todas as novidades clique neste <a href="<%= @url %>">link</a>.
     </p>
-    <p>Obrigado por registar e bom negócio!</p>
+    <p>Obrigado pela sua visita!</p>
   </body>
 </html>
