--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -10,7 +10,7 @@
       O seu login com <%= @email %>, foi feito com sucesso,
     </p>
     <p>
-      Para seguir todas as novidades: <%= @url %>.
+      Para seguir todas as novidades clique neste <a href="<%= @url %>">link</a>.
     </p>
     <p>Obrigado pela sua visita!</p>
   </body>
