--- a/app/views/layouts/_sidebar_right_featured.html.erb
+++ b/app/views/layouts/_sidebar_right_featured.html.erb
@@ -16,10 +16,10 @@
 
                   <article class="media hover">
                       <%= link_to ad_image(highlight.ad_images.first), highlight, class:"pull-left thumb p-thumb", style:"width:30%"%>
-                    <div class="media-body">
-                      <a class="url" href="#" class=" p-head"><%= highlight.title %></a>
-                      <p><%= truncate(highlight.description,:lenght=>35 ) %></p>
-                    </div>
+                      <div class="media-body">
+                        <%= link_to highlight.title, highlight, class:"url" %>
+                        <p><%= truncate(highlight.description,:lenght=>35 ) %></p>
+                      </div>
                   </article>
 
                   <% end %>
