--- a/app/views/layouts/userslayouts.html.erb
+++ b/app/views/layouts/userslayouts.html.erb
@@ -31,7 +31,7 @@
   <!-- Keep all page content within the page-content inset div! -->
   <div id="user_profile">
 
-    <div class="row" style="margin-right: 0px;">
+    <div class="row profile-info" style="margin-right: 0px;">
 
       <aside class="profile-nav col-lg-3">
         <section class="panel">
