--- a/app/views/layouts/userslayouts.html.erb
+++ b/app/views/layouts/userslayouts.html.erb
@@ -60,7 +60,6 @@
           
             <% end %>
 
-
             <li>
          
 
@@ -73,6 +72,18 @@
               <% end %>
 
          
+            </li>
+            
+            
+            <% if (current_user && @user.id == current_user.id) %>
+              <li>
+                <%= link_to " Feeds".html_safe , feed_path, :class => "fa fa-list" %>
+              </li>
+            <% end %>
+            
+            
+            <li>
+                <%= link_to " Rss de #{@user.name}".html_safe , rss_user_path(@user.id), :class => "fa fa-rss" %> 
             </li>
           </ul>
 
