[Update Feature] follows

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -90,12 +90,12 @@
                 <% @user.following.each do |f| %>
                   <div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
                     <a href="/users/<%= f.id %>">
-                      <%= image_tag f.avatar.url(:medium),:width => "100%", class:"img-circle", title:"#{f.name}"%>
+                      <%= image_tag f.avatar.url(:medium),:width => "90px", height:"90px", class:"img-circle", title:"#{f.name}"%>
                     </a>
                   </div>
 
                     <% i = i+1%>
-                    <% if i > 15 %>
+                    <% if i > 30 %>
                         <%break%>
                     <% end %>
                 <% end %>
@@ -117,11 +117,11 @@
                 <% @user.followers.each do |f| %>
                   <div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
                     <a href="/users/<%= f.id %>">
-                      <%= image_tag f.avatar.url(:medium),:width => "100%", class:"img-circle", title:"#{f.name}"%>
+                      <%= image_tag f.avatar.url(:medium),:width => "90px", height:"90px", class:"img-circle", title:"#{f.name}"%>
                         </a>
                   </div>
                     <%i = i+1%>
-                    <% if i > 15 %>
+                    <% if i > 30 %>
                         <%break%>
                     <% end %>
                 <% end %>
