[DESIGN FEATURE]Sidebar destaques - ads[Hélder Abreu]

--- a/app/views/layouts/_sidebar_right_featured.html.erb
+++ b/app/views/layouts/_sidebar_right_featured.html.erb
@@ -9,7 +9,7 @@
 <% end %>
 
 <div class="col-lg-12 col-md-12 col-sx-12 col-sm-6">
-    <section class="panel">
+    <section class="panel" style="border:1px solid #ddd;">
         <div class="panel-body">
             <div>
               <% @ads_highlights.each do |highlight| %>
