--- a/app/views/layouts/_sidebar_right_ad.html.erb
+++ b/app/views/layouts/_sidebar_right_ad.html.erb
@@ -1,7 +1,7 @@
 <% publicity_list = get_publicity(3) %>
 <% if (publicity_list && publicity_list.length>0) %>
 <div class="col-lg-12 col-md-12 col-sx-12 col-sm-6">
-  <section class="panel">
+  <section class="panel" style="border: 1px solid #ddd;">
     <header class="panel-heading">Publicidade</header>
     
     <div class="panel-body">
