--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -136,6 +136,7 @@ a:hover #dropCarret{
 
 /****FOOTER****/
 footer {
+  z-index: 10;
   position: relative;
   padding-top: 10px;
   background-color: #00A75D;
