--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -166,7 +166,7 @@
             </div>
             <br>
             <div style="width: 100%; text-align: right; margin-top: 10px;">
-              <div class="fb-share-button sharebutton" data-href="http://teste94.di.uminho.pt/" data-type="button">
+              <div class="fb-share-button sharebutton" data-href="<%= ad_url(@ad) %>" data-type="button">
               </div>
               <div class="sharebutton">
                  <a href="https://twitter.com/share" class="twitter-share-button" data-count="none">Tweet</a>
