--- a/app/views/event/events/show.html.erb
+++ b/app/views/event/events/show.html.erb
@@ -88,7 +88,7 @@
           <%= link_to @event_event.user.name, @event_event.user, class:"url" %>
         </div>
         <div style="float:right;">
-          <div class="fb-share-button sharebutton" data-href="http://teste94.di.uminho.pt/" data-type="button"></div>
+          <div class="fb-share-button sharebutton" data-href="<%= event_event_url(@event_event) %>" data-type="button"></div>
           <div class="sharebutton">
             <a href="https://twitter.com/share" class="twitter-share-button" data-count="none">Tweet</a>
           </div>
