--- a/app/assets/stylesheets/ads.css
+++ b/app/assets/stylesheets/ads.css
@@ -369,6 +369,6 @@ border-radius: 4px 4px 0 0;
 }
 
 #pagination-top * {
-	margin-top: 0;
-	margin-bottom: 10px;
+	margin-top: 10px;
+	margin-bottom: 0;
 }
