--- a/app/views/ratings/_show.html.erb
+++ b/app/views/ratings/_show.html.erb
@@ -1,5 +1,5 @@
 	<tr>
 		<td width="30%"><%= rating.rated.email %></td>
 		<td width="50%"><%= rating.ad.title%></td>
-		<td width="20%"><%= link_to "Atribuir Rate" , edit_rating_path(rating) %></td>
+		<td width="20%"><%= link_to "Atribuir Reputação" , edit_rating_path(rating) %></td>
 	</tr>
