--- a/app/views/ratings/edit.html.erb
+++ b/app/views/ratings/edit.html.erb
@@ -1,6 +1,6 @@
 <ol class="breadcrumb" id="breadcrumbAds" style="border: 1px solid #dddddd;">
   <li class="active">
-    <i class="fa fa-shopping-cart"></i> <a class="url" href="<%= ratings_path %>">Avaliações</a>
+    <i class="fa fa-shopping-cart"></i> <a class="url" href="<%= ratings_path %>">Reputações</a>
   </li>
 </ol>
 
@@ -8,7 +8,7 @@
 
 	<div class="container">
 		<div class="row">
-			<h3 style="margin: 10px 0;">UTILIZADOR A AVALIAR</h3> 
+			<h3 style="margin: 10px 0;">UTILIZADOR A ATRIBUIR REPUTAÇÃO</h3> 
 			<h4 style="margin: 15px 20px;"><%= @rating.rated.name %></h4>
 		</div>
 	    <div class="row lead" style="margin: 0 0 10px 68px;">
