--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -44,7 +44,7 @@
     <section class="panel" style="margin-right:15px;">
         <div class="panel-default" style="">
             <div class="panel-heading border-header panel-default">
-                <h3 class="panel-title">Avaliação de <%= @user.name %></h3>
+                <h3 class="panel-title">Reputação de <%= @user.name %></h3>
             </div>
         </div>
 
