--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -570,12 +570,12 @@ border-color: #eff2f7;
 
 
 /******AUTOCOMPLETE**********/
-.typeahead { z-index :1051;width: 400px;  }
-.typeahead_wrapper { display: block; height: 50px; z-index:9999; }
-.typeahead_photo { float: left; max-width: 40px; max-height: 40px; margin-right: 5px; }
+.typeahead { z-index: 1051; width: 400px; }
+.typeahead_wrapper { display: block; height: 50px; z-index:9999; border-bottom: 1px solid #ddd; }
+.typeahead_photo { float: left; max-width: 45px; max-height: 45px; margin-right: 5px; border-radius: 3px 3px 3px 3px; margin-top: 8px;}
 .typeahead_labels { float: left; height: 30px; }
 .typeahead_primary { font-weight: bold;z-index:9999; padding:4px;}
-.typeahead_secondary { font-size: .9em; margin-top: -5px; padding:0px; }
+.typeahead_secondary { font-size: .9em; margin-top: -5px; padding:0px; margin-left: 10px;}
 .typeahead_typo{ color: green; }
 
 #search_query {  
