--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer style="position:fixed;">
+<footer class="footer">
   <div style="width:100%; display:inline-block;">
     <div style="float:left; min-width:375px;">
       <ul id='footer-info'>
