--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -134,16 +134,21 @@ a:hover #dropCarret{
 }
 
 
+
+
 /****FOOTER****/
 footer {
   z-index: 100;
-  position: relative;
+
   padding-top: 10px;
   background-color: #00A75D;
   bottom: 0px;
   width: 100%;
   color: #fff;
   clear: both;
+  bottom: 0;
+ 
+
 }
 
 footer a{
@@ -186,7 +191,11 @@ background-color: #16ab84;
 #wrapper {
   transition: all 0.4s ease 0s;
   margin-top: 40px;
-
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+ 
+  
 }
 
 .main-button-left{
@@ -219,6 +228,7 @@ background-color: #16ab84;
 
 #page-content-wrapper {
   width: 100%;
+  height: 100%;
   padding: 15px 0px;
 }
 
